--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ body {
   font-weight: 100;
 }
 
-.forecast-temp, forecast-condition {
+.forecast-temp,
+forecast-condition {
   font-size: 0.875rem;
 }
