--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ forecast-condition {
   border-color: #3b82f6;
 }
 
-.search-btn {
+.search-button {
   padding: 10px 15px;
   font-size: 16px;
   color: white;
